# cell-flow-sims

./: ARCHITECTURE.md  PROJECT_STATUS.md  README.md  ROADMAP.md  environment.yml  pyproject.toml
cell_sphere_sim/: __init__.py  config.py  division.py  engine.py  forces.py  init.py  metrics.py  neighbors.py  polarity.py  state.py
cell_sphere_sim.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cell_sphere_sim/fields/: __init__.py  base.py
cell_sphere_sim/io/: __init__.py  stores.py  tracks_init.py
configs/: sim_minimal.yaml  states_minimal.yaml
docs/: CHANGELOG_v2.md  CODEX_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_v2.md  KF_cell_model_specs_UPDATED.md  MODEL_SPEC_v2.md  PHASE2_OUTSTANDING.md  backend_overview.md
examples/: init_from_tracks.py  run_minimal.py  run_napari.py
notebooks/: backend_diagnostics.ipynb  workflow_demo.ipynb
notebooks/.ipynb_checkpoints/: workflow_demo-checkpoint.ipynb
sim_viewer/: __init__.py  napari.yaml  plugin.py
tests/: test_cil.py  test_constraints.py  test_division.py  test_init.py  test_neighbors.py  test_tracks_store.py  test_transport.py
